--- a/CloudCustomers.UnitTests/CloudCustomers.UnitTests.csproj
+++ b/CloudCustomers.UnitTests/CloudCustomers.UnitTests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include=" ..\CloudCustomers.API\CloudCustomers.API.csproj" />
     <PackageReference Include="FluentAssertions" Version="6.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="Moq" Version="4.18.4" />
